feat: Agrega dashboard por tipo de medio de pago
